--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-sm-2">
             <div class="btn-group" uib-dropdown is-open="false">
-                <button id="single-button" Teams type="button" class="btn btn-primary" uib-dropdown-toggle
+                <button id="single-button" type="button" class="btn btn-primary" uib-dropdown-toggle
                         ng-disabled="disabled">
                     {{ selectedTeam }} <span class="caret"></span>
                 </button>
@@ -101,7 +101,7 @@
 
         <tbody>
         <tr class="hvr-grow-shadow"
-            ng-repeat-start="user in users | filter : teamSearch | orderBy : propertyName : reverse | filter : nameSearch.fullName : strict | filter : leaderSearch.leader | filter : contractSearch"
+            ng-repeat-start="user in users | filter : teamSearch | orderBy : propertyName : reverse | filter : nameSearch.fullName : strict | filter : leaderSearch | filter : contractSearch"
             ng-click="isCollapsed=!isCollapsed">
             <td ng-if="user.leader"><b>{{ user.name }} {{ user.surname }}</b></td>
             <td ng-if="!user.leader">{{ user.name }} {{ user.surname }}</td>
