--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -172,7 +172,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="3" style="text-align: center"><a
-                                            href="admin/employees/user?mail={{user.mail}}">
+                                            href="admin/employees/user?mail={{user.principalName}}">
                                         {{'employees_view.show_all' | translate}}</a></td>
                                 </tr>
                                 </tbody>
