Issue #5 and request fix

--- a/src/main/resources/public/partials/confirm_days.html
+++ b/src/main/resources/public/partials/confirm_days.html
@@ -9,7 +9,7 @@
          <span class="confirm_text" ng-if="!isNegative" translate="employees_view.add_days_confirm"
                translate-values="{daysToAdd: daysToAdd, employee: employee}"></span>
         <span class="confirm_text" ng-if="isNegative" translate="employees_view.subtr_days_confirm"
-              translate-values="{daysToAdd: daysToAdd, employee: employee}"></span
+              translate-values="{daysToAdd: daysToAdd, employee: employee}"></span>
     </span>
 </div>
 <div class="button_holder">
