hours checkbox hidden in admin's employee view when employee is employed full-time fixes #8

--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -136,11 +136,11 @@
                                 </span>
                             </h4>
                             <br>
-                            <div class="checkbox">
+                            <div ng-if="workTime !== 8" class="checkbox">
                                 <label><input type="checkbox" ng-click="isHourly = !isHourly" value="">{{'employees_view.hourly'
                                     | translate}}</label>
+                                <br><br>
                             </div>
-                            <br>
                             <b>{{ 'employees_view.modify_pool' | translate}}</b>
                             <div class="input-group">
                                 <span class="input-group-btn">
