added application version

--- a/src/main/resources/public/partials/login.html
+++ b/src/main/resources/public/partials/login.html
@@ -19,6 +19,7 @@
                            required>
                 </div>
                 <button type="submit" class="btn btn-block">{{'login.login' | translate}}</button>
+                <span>ver. {{appVersion}}</span>
             </form>
         </div>
     </div>
