--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -77,6 +77,7 @@ body {
 }
 
 #login .box #login-form {
+    position: relative;
     padding: 20px 30px 30px;
     margin: 0 2px 2px 2px;
     background: #fff;
@@ -86,6 +87,15 @@ body {
     margin-top: 30px;
     background: #f65d00;
     color: #fff;
+}
+
+#login .box #login-form span {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    font-size: 0.9rem;
+    font-weight: normal;
+    color: #888;
 }
 
 .panel {
