issue #6 show decider instead of leader when request rejected

--- a/src/main/resources/public/partials/worker.html
+++ b/src/main/resources/public/partials/worker.html
@@ -50,7 +50,8 @@
                     <td>
                         <div ng-if="request.accepted == null">
                             <div ng-repeat="acceptance in request.acceptances">
-                            <span>{{acceptance.leader.name}} -
+                            <span>
+                                {{acceptance.leader.name}} -
                                 <span ng-if="acceptance.accepted === true">{{'table.accepted' | translate}}</span>
                                 <span ng-if="acceptance.accepted === false">{{'table.denied' | translate}}</span>
                                 <span ng-if="acceptance.accepted === null">{{'table.in_progress' | translate}}</span>
@@ -63,7 +64,7 @@
                             {{'table.denied' | translate}}
 
                             <span ng-repeat="acceptance in request.acceptances">
-                            <span ng-if="!acceptance.accepted"><br>{{acceptance.leader.name}}</span>
+                            <span ng-if="!acceptance.accepted"><br>{{acceptance.decider.name}}</span>
                         </span>
                         </div>
                         <span ng-if="request.accepted == false && request.cancelled == true">{{'table.cancelled' | translate}}</span>
