--- a/src/main/resources/mails/occasionalResponse_pl.hbs
+++ b/src/main/resources/mails/occasionalResponse_pl.hbs
@@ -2,7 +2,7 @@ Urlop okolicznościowy
 ----------------------------
 Dzień dobry,
 
-Prośba o urlop okolicznościowy została zaakceptowana. Pamiętaj o dostraczeniu potrzebnych dokumentów do sekretariatu.
+Prośba o urlop okolicznościowy została zaakceptowana. Pamiętaj o dostarczeniu potrzebnych dokumentów do sekretariatu.
 
 
 {{>footer_pl}}
