Adding workTime manipulation input
Changed UserDetails view
Added user workTime manipulation
Added REST controller
Changed recent history to last 5 records
Fixed drop-create issue
Issue #19 fix
Updated Bootstrap to v. 3.7

--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -4,6 +4,7 @@
     <h2 class="view-title text-left">{{ 'employees_view.title' | translate}}</h2>
     <hr>
 
+    <!--navigation-->
     <div class="row">
         <div class="col-xs-6 text-left">
             <a class="btn btn-primary" role="button" ng-click="prevPage()"><b><</b></a>
@@ -100,6 +101,8 @@
         </thead>
 
         <tbody>
+
+        <!--User header-->
         <tr class="hvr-grow-shadow"
             ng-repeat-start="user in users | filter : teamSearch | orderBy : propertyName : reverse | filter : nameSearch.fullName : strict | filter : leaderSearch | filter : contractSearch"
             ng-click="isCollapsed=!isCollapsed">
@@ -117,48 +120,99 @@
                 <span ng-if="!user.ec && !user.b2B" style="color: red"> {{ 'employees_view.contract_issue' | translate }}</span>
             </td>
         </tr>
+
         <!--User detail-->
         <tr ng-repeat-end="">
             <td colspan="4" class="employee_details">
                 <div ng-if="!isCollapsed" ng-controller="UserDetailsCtrl" class="well animated fadeInUp">
                     <div class="row">
-                        <div class="col-md-6" style="margin-bottom: 1em">
-                            <h4>
-                                <span translate="employees_view.days_left"
-                                      translate-values="{days: response.days,hours: response.hours}">
-                                </span>
-                                <span ng-if="response.workTimeA != 1 && response.workTimeB != 1"
-                                      translate="employees_view.shift"
-                                      translate-values="{workTime_a: response.workTimeA,workTime_b: response.workTimeB}">
-                                </span>
-                                <span ng-if="response.workTimeB == 1 || response.workTimeA == 1">
-                                    {{ 'employees_view.full_time' | translate }}
-                                </span>
-                            </h4>
-                            <br>
-                            <div ng-if="workTime !== 8" class="checkbox">
-                                <label><input type="checkbox" ng-click="isHourly = !isHourly" value="">{{'employees_view.hourly'
-                                    | translate}}</label>
-                                <br><br>
+
+                        <!--User pool and workTime-->
+                        <div class="col-md-6">
+                            <div class="jumbotron" style="padding-top: 2%; padding-bottom: 2%; ">
+                                <h4>
+                                    <span class="padded" translate="employees_view.works_on">
+                                    </span>
+                                    <b>
+                                        <span class="padded" ng-if="workTime !== 8"
+                                              translate="employees_view.shift"
+                                              translate-values="{workTime_a: workTimeA,workTime_b: workTimeB}">
+                                        </span>
+                                    </b>
+                                    <b>
+                                        <span class="padded" ng-if="workTime === 8">
+                                            {{ 'employees_view.full_time' | translate }}
+                                        </span>
+                                    </b>
+                                    <br>
+                                    <span class="padded" translate="employees_view.days_left_start">
+                                    </span>
+                                    <b>
+                                        <span class="padded" translate="employees_view.days_left"
+                                              translate-values="{days: days,hours: hours}">
+                                        </span>
+                                    </b>
+                                    <span class="padded" translate="employees_view.days_left_end">
+                                    </span>
+                                </h4>
                             </div>
-                            <b>{{ 'employees_view.modify_pool' | translate}}</b>
-                            <div class="input-group">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button" ng-click="decrement()"><span
-                                            class="glyphicon glyphicon-minus"></span></button>
-                                </span>
-                                <input type="text" class="form-control" value="{{daysToAdd}}" ng-model="daysToAdd">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button" ng-click="increment()"><span
-                                            class="glyphicon glyphicon-plus"></span></button>
-                                    <button class="btn btn-default" type="button" ng-click="ok()"><span
-                                            class="glyphicon glyphicon-ok-sign" style="color: green"></span></button>
-                                </span>
+
+                            <div class="row">
+                                <!--User pool-->
+                                <div class="col-md-6">
+                                    <!--title-->
+                                    <b>{{ 'employees_view.modify_pool' | translate}}</b>
+                                    <b ng-if="isHourly">({{'employees_view.hours' | translate}})</b>
+                                    <b ng-if="!isHourly">({{'employees_view.days' | translate}})</b>
+
+                                    <!--input-->
+                                    <div class="input-group full-width">
+                                        <span class="input-group-btn">
+                                            <button id="mode_switch" class="btn btn-default no-bottom-radius"
+                                                    type="button" data-toggle="tooltip"
+                                                    data-delay='{"show":"100", "hide":"100"}' title=""
+                                                    ng-click="changeMode(workTime)"><span
+                                                    class="glyphicon glyphicon-time"
+                                                    style="color: dodgerblue"></span></button>
+                                            <button class="btn btn-default no-bottom-radius" style="margin: 0"
+                                                    type="button" ng-click="decrement()"><span
+                                                    class="glyphicon glyphicon-minus"></span></button>
+                                        </span>
+                                        <input type="text" class="form-control no-bottom-radius" value="{{daysToAdd}}"
+                                               ng-model="daysToAdd">
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-default no-bottom-radius" type="button"
+                                                    ng-click="increment()"><span
+                                                    class="glyphicon glyphicon-plus"></span></button>
+                                            <button class="btn btn-default no-bottom-radius" type="button"
+                                                    ng-click="ok()"><span
+                                                    class="glyphicon glyphicon-ok-sign"
+                                                    style="color: green"></span></button>
+                                        </span>
+                                    </div>
+                                    <textarea class="form-control comment full-width" ng-model="comment"
+                                              placeholder="{{ 'employees_view.comment_placeholder' | translate}}"></textarea>
+                                </div>
+
+                                <!--User worktime-->
+                                <div class="col-md-6">
+                                    <!--title-->
+                                    <b>{{ 'employees_view.modify_workTime' | translate}}</b>
+                                    <!--buttons-->
+                                    <div ng-show="showWorkTimeButtons()">
+                                        <div ng-repeat="times_table in workTimes"
+                                             id="buttons-row-{{$parent.$id}}-{{$index}}"
+                                             class="btn-group btn-group-justified button-bottom-spaced" role="group">
+                                            <button ng-repeat="time in times_table"
+                                                    class="btn btn-default" ng-click="setWorkTime(time)">{{time}}
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <input type="text" class="form-control" ng-model="comment"
-                                   placeholder="{{ 'employees_view.comment_placeholder' | translate}}">
-                            <button class="btn btn-danger" ng-click="report()">Raport</button>
                         </div>
+
+                        <!--User history-->
                         <div class="col-md-6">
                             <b>{{ 'employees_view.last_operations' | translate}}</b><br>
                             <table class="table table-striped">
@@ -178,6 +232,7 @@
                                 </tbody>
                             </table>
                         </div>
+                        <button style="margin-top: -10px" class="btn btn-danger" ng-click="report()">Raport</button>
                     </div>
                 </div>
             </td>
