--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -13,6 +13,11 @@ body {
     background: #ddd;
 }
 
+/*global style*/
+.full-width {
+    width: 100%;
+}
+
 .table > tbody > tr > td {
     vertical-align: middle;
     text-align: center;
@@ -167,6 +172,29 @@ body {
     border: 0;
     border-bottom: 3px;
     border-radius: 0 0 15px 15px;
+}
+
+#employees .padded {
+    line-height: 2em;
+}
+
+#employees .comment {
+    min-height: 2em;
+    height: 6em;
+    resize: none;
+    border-top: none;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
+}
+
+#employees .no-bottom-radius {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+#employees .button-bottom-spaced {
+    margin-bottom: 4%;
 }
 
 /*CONFIRM MODAL*/
