--- a/src/main/resources/public/partials/userHistory.html
+++ b/src/main/resources/public/partials/userHistory.html
@@ -40,17 +40,20 @@
             </td>
             <td ng-if="!history.request">{{ history.deciderName }}</td>
             <td>
-                <span ng-if="history.hours > 0">
+                <span ng-if="!history.request || (history.request.type === 'NORMAL' && history.hours > 0)">
                     <span class="text-center text-success">{{ history.days }}</span>
                 </span>
-                <span ng-if="history.hours < 0">
-                    <span class="text-center text-danger">{{ history.days }}</span>
+                <span ng-if="history.request.type === 'OCCASIONAL'">
+                    <span class="text-center text-warning">{{ history.days }}</span>
+                </span>
+                <span ng-if="history.request.type === 'NORMAL' && history.hours < 0">
+                    <span class="text-center text-danger">{{ history.days }} </span>
                 </span>
             </td>
             <td class="text-center">
                 {{ history.daysLeft }}
             </td>
-            <td>{{ history.comment }}</td>
+            <td>{{ history.comment }} </td>
         </tr>
         </tbody>
     </table>
