--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -61,7 +61,10 @@ body {
 #login .box {
     margin-left: auto;
     margin-right: auto;
+    margin-top: -1px;
     width: 400px;
+    height: 100%;
+    border: 0;
 
     background: #72a200;
 }
