--- a/src/main/resources/public/partials/login.html
+++ b/src/main/resources/public/partials/login.html
@@ -10,7 +10,7 @@
                 <div class="form-group">
                     <label for="mail">{{'login.mail' | translate}}</label>
                     <input type="email" id="mail" name="mail" ng-model="credentials.mail"
-                           class="form-control" autofocus required>
+                           class="form-control" required>
                 </div>
                 <div class="form-group">
                     <label for="password">{{'login.password' | translate}}</label>
