--- a/src/main/resources/public/partials/request.html
+++ b/src/main/resources/public/partials/request.html
@@ -44,7 +44,7 @@
                             {{ selectedItem }} <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
-                            <li class="dropdown-header" ng-disabled="true">2 dniowe</li>
+                            <li class="dropdown-header" ng-disabled="true">{{ "form.2_days" | translate }}</li>
                             <li class="divider"></li>
                             <li class="dropdown_button" role="menuitem"><a ng-click="dropBoxItemSelected(reasons[0])">{{reasons[0]}}</a>
                             </li>
@@ -53,7 +53,7 @@
                             <li class="dropdown_button" role="menuitem"><a ng-click="dropBoxItemSelected(reasons[2])">{{reasons[2]}}</a>
                             </li>
                             <li class="divider"></li>
-                            <li class="dropdown-header">1 dniowe</li>
+                            <li class="dropdown-header">{{ "form.1_day" | translate}}</li>
                             <li class="divider"></li>
                             <li class="dropdown_button" role="menuitem"><a ng-click="dropBoxItemSelected(reasons[3])">{{reasons[3]}}</a>
                             </li>
