changes the way to use, save and display history --> fixes #47, fixes #46, fixes #42 --> database structure changed!

--- a/src/main/resources/public/partials/admin_employees.html
+++ b/src/main/resources/public/partials/admin_employees.html
@@ -217,13 +217,34 @@
                             <b>{{ 'employees_view.last_operations' | translate}}</b><br>
                             <table class="table table-striped">
                                 <tbody>
-                                <tr ng-repeat="history in userHistory.list">
-                                    <td>{{history.created}}
-                                    </td>
-                                    <td class="text-center">{{ history.days }}
-                                    </td>
-                                    <td>{{ history.comment }}</td>
-                                </tr>
+                                    <tr ng-repeat-start="history in userHistory.list">
+                                        <td>{{history.created}}
+                                        </td>
+                                        <td ng-if="history.fullTime" class="text-center">
+                                            {{ history.days }}
+                                        </td>
+                                        <td ng-if="!history.fullTime" class="text-center">
+                                            {{ history.hours }}
+                                        </td>
+                                        <td>{{ history.comment }}</td>
+                                    </tr>
+                                    <tr ng-repeat-end ng-if="history.workTime !== userHistory.list[$index + 1].workTime">
+                                        <td colspan="3">
+                                            <span ng-if="userHistory.list[$index + 1] != null">
+                                                {{'employees_view.workTime_changed' | translate}} :
+                                            </span>
+                                            <span ng-if="userHistory.list[$index + 1] == null">
+                                                {{'employees_view.workTime' | translate}} :
+                                            </span>
+                                            <span ng-if="history.workTime !== 8"
+                                                  translate="employees_view.shift"
+                                                  translate-values="{workTime_a: history.workTimeNominator,workTime_b: history.workTimeDenominator}">
+                                            </span>
+                                            <span ng-if="history.workTime === 8">
+                                                {{ 'employees_view.full_time' | translate }}
+                                            </span>
+                                        </td>
+                                    </tr>
                                 <tr>
                                     <td colspan="3" style="text-align: center"><a
                                             href="admin/employees/user?mail={{user.principalName}}">
