improved requests table for worker, leader and admin fixed #26

--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -337,3 +337,31 @@ div.days_confirm_text{
     padding-top: 9px;
     padding-bottom: 9px;
 }
+
+/* WORKER AND LEADER VIEW */
+th[st-sort] {
+    cursor: pointer;
+
+}
+th[st-sort]:not(.st-sort-ascent):not(.st-sort-descent) span.sort.glyphicon:after{
+    content: "\e150";
+    color: #DDD;
+}
+
+th.st-sort-ascent span.sort.glyphicon:after{
+    content: "\e155";
+    color: #337ab7
+}
+
+th.st-sort-descent span.sort.glyphicon:after{
+    content: "\e156";
+    color: #b77a33
+}
+
+.custom-select {
+    background: white;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    width: 100%;
+    border-radius: 3px;
+}
