--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -183,21 +183,25 @@ body {
 
 #employees .comment {
     min-height: 2em;
-    height: 6em;
+    height: 4em;
     resize: none;
     border-top: none;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-
+    border-bottom: none;
+    border-radius: 0;
 }
 
-#employees .no-bottom-radius {
+.no-bottom-radius {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
 
 #employees .button-bottom-spaced {
     margin-bottom: 4%;
+}
+
+.no-top-radius {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 /*CONFIRM MODAL*/
@@ -336,4 +340,12 @@ div.days_confirm_text{
 .dropdown-reversed li a {
     padding-top: 9px;
     padding-bottom: 9px;
+}
+
+.custom-select {
+    background: white;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    width: 100%;
+    border-radius: 3px;
 }
