Search label fix

--- a/src/main/resources/public/partials/admin_requests.html
+++ b/src/main/resources/public/partials/admin_requests.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <th>
-                    <input st-search="requester.name" placeholder="{{'table.search.term' | translate}}" class="input-sm form-control" type="search"/>
+                    <input st-search="requester.name" placeholder="{{'table.search.requester' | translate}}" class="input-sm form-control" type="search"/>
                 </th>
                 <th>
                 </th>
