--- a/src/main/resources/public/partials/request.html
+++ b/src/main/resources/public/partials/request.html
@@ -21,9 +21,8 @@
             <div class="row">
                 <div class="col-sm-3">
                     <label for="leader">{{'form.request.leader.label' | translate }}</label>
-                    <input type="text" class="form-control" id="leader" name="leader" ng-repeat="team in teams"
-                           value="{{ team.leader.name + ' ' + team.leader.surname +' ' }}"
-                           placeholder="{{'form.request.leader.placeholder' | translate}}" readonly="readonly"/>
+                    <input type="text" class="form-control" id="leader" name="leader" ng-repeat="name in leadersNames"
+                           value="{{ name }}" readonly="readonly"/>
                 </div>
             </div>
         </div>
